show me the font!

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -7,11 +7,11 @@
 }
 
 .list-title, .term-title, .list-year, .list-month {
-    font-family: 'Cinzel+Decorative', 'Cinzel Decorative', 'Noto Serif SC', serif;
+    font-family: 'Cinzel Decorative', 'Noto Serif SC', Mukta;
 }
 
 .brand {
-    font-family: 'Monoton', Source+Code+Pro;
+    font-family: 'Cinzel Decorative', Source+Code+Pro;
     //font-weight: bold;
     font-size: 1.5em;
 }
